# RemotePhones

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  AGENT_FINAL_REPORT.md  AGENT_PROGRESS.md  AGENT_TASK_LIST.md  CLAUDE_CODE_PROMPT.md  CLAUDE_LOG.md  COMMERCIAL_SUPPORT_ECOSYSTEM.md  DISTRIBUTED_SYSTEM_ARCHITECTURE.md  KILO_CODE_PROMPT.md  KILO_LOG.md  KURULUM.md  LAGUNA_LOG.md  LICENSE  MOBILE_WEB_HELPER_APPS.md  MONITORING_OBSERVABILITY.md  NEMOTRON_LOG.md  OPENCODE_LOG.md  OPENCODE_PROMPT.md  README.md  RELEASE_NOTES.md  SECURITY_COMPLIANCE.md  SISYPHUS_LOG.md  STEP_LOG.md  SUMMARY.txt  WINDOWS_KULLANICI_REHBERI.md  async_audit_summary.txt  kilo.json  launch.bat  mypy.ini  nemotron_utf8.txt  package-lock.json  package.json  phone_farm_cli.py  phone_farm_cli.spec  pyproject.toml  qa-adb-restart.js  (+6 more)
.claude/: settings.json  settings.local.json
ai/: utils.py
automations/: __init__.py  base.py  instagram.py  instagram_flow.py
config/: loader.py  phone_farm.yaml
core/: __init__.py  adb.py  device_manager.py  mobile_ops.py  phone.py  utils.py
docker/: Dockerfile  README.md  docker-compose.yml
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
monitor/: __init__.py  alerts.py  api.py  health.py  phone_health.py  poller.py  reporter.py  status.py
scheduler/: __init__.py  async_job_queue.py  async_manager.py  job_queue.py  manager.py  priority.py  runner.py
shared/: error_messages.json
src/: preload.js
tasks/: __init__.py  base_task.py  concrete.py  phone_call.py  registry.py
tests/: conftest.py  (+20 more)
(+97 files in other folders)
