[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "phone-farm"
version = "3.0.0"
description = "Mobile device automation platform"
requires-python = ">=3.10"
dependencies = [
    "pure-python-adb>=0.3.0.dev0",
    "scrcpy-client>=0.1.0",
    "schedule>=1.2.0",
    "apscheduler>=3.11.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "fastapi==0.115.6",
    "uvicorn[standard]>=0.23.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pillow>=9.0.0",
    "scikit-learn>=1.3.0",
    "opencv-python>=4.7.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
phone-farm-cli = "phone_farm_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "black>=23.0",
]

[tool.setuptools.packages.find]
include = [
    "config*",
    "core*",
    "scheduler*",
    "utils*",
    "monitor*",
    "tasks*",
    "automations*",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true
exclude = ['(\.git/|__pycache__/|dist/|build/|.*\.egg-info/|\.opencode/|\.pytest_cache/|node_modules/|tests/|^test_)']

[tool.pytest.ini_options]
testpaths = ["tests"]
